add dynamic title

--- a/drab_bard.html
+++ b/drab_bard.html
@@ -13,9 +13,12 @@
         <div id="grid">
             <div class="header">
                 <h1>The Daily Moo</h1>
-                <!-- <h3>Toronto, On - </h3> -->
+                <!-- <h3> Toronto, On - </h3> -->
             </div>
-            <h2 class="title">Drab as a Fool Aloof as a Bard</h2>
+            <div class="titleDiv">
+                <!-- <h2> Title goes here </h2> -->
+            </div>
+            
             <div id="acrossHeading" >
                 <h4 class="clue-names" >Across</h4>
             </div>
