adjusted links and tweeked size

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src= "drab_bard.js" charset="utf-8"></script>
-    <!-- <script data-main="scripts/drab_bard" src= "scripts/require.js"></script> -->
+    <script src= "crossword.js" charset="utf-8"></script>
+    <!-- <script data-main="scripts/crossword" src= "scripts/require.js"></script> -->
 </body>
 </html>
