added new styles and tested set attribute for single column clues

--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
                 <!-- <h2> Title goes here </h2> -->
             </div>
             
-            <div id="acrossHeading" >
+            <div id="acrossHeading" class="clues" is_heading_active="active">
                 <h4 class="clue-names" >Across</h4>
             </div>
-            <div id="downHeading" >
+            <div id="downHeading" class="clues" is_heading_active="not-active">
                 <h4 class="clue-names" >Down</h4>
             </div>
             <form id="x_grid" class="cross-grid" method="get" onsubmit="return false">
 
             </form>
             <button style="background-color: rgba(0, 0, 0, 0.8);">Check Answers</button>
-            <div id="across" class="clueBox" ></div>
-            <div id="down" class="clueBox" ></div>
+            <div id="across" class="clueBox" is_cluelist_active="active"></div>
+            <div id="down" class="clueBox" is_cluelist_active="not-active"></div>
         </div>
     </div>
     
